test/spec_vectors/conversions/fail/module_23.wat
(module (func (result f64) (f64.convert_i64_u (i32.const 0))))